--- a/cohorts/2025/01-intro/Homework.ipynb
+++ b/cohorts/2025/01-intro/Homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5eed3ff9",
+   "id": "94d2b059",
    "metadata": {},
    "source": [
     "### Q1. Running Elastic\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f3206055",
+   "id": "f1b11426",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b5647227",
+   "id": "52d3c53b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d787c2",
+   "id": "af7c7d9d",
    "metadata": {},
    "source": [
     "version.build_hash = dbcbbbd0bc4924cfeb28929dc05d82d662c527b7"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a61b4b0c",
+   "id": "3e622cd2",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d8679b4",
+   "id": "be3dd458",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c2c19e",
+   "id": "0d2ddf2b",
    "metadata": {},
    "source": [
     "## Q2. Indexing the data"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0dbf0258",
+   "id": "e91515ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9b704d6f",
+   "id": "5b26d8c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5269fca9",
+   "id": "974b109c",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "36aa2ada",
+   "id": "86fff325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dfe12758",
+   "id": "cfa5c665",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff3da251",
+   "id": "524d4840",
    "metadata": {},
    "source": [
     "Which function do you use for adding your data to elastic?\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69e2bdb",
+   "id": "61083e32",
    "metadata": {},
    "source": [
     "## Q3. Searching\n"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a5daac6b",
+   "id": "84855010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "debaf30c",
+   "id": "41a1aef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "be7a9647",
+   "id": "4f93d10f",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8448eb5b",
+   "id": "60c418b7",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725fa68f",
+   "id": "85899257",
    "metadata": {},
    "source": [
     "What's the score for the top ranking result?\n",
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b2a606f",
+   "id": "b5a7a927",
    "metadata": {},
    "source": [
     "## Q4. Filtering\n"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1609196c",
+   "id": "c1acf5a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "185858a8",
+   "id": "2dc39805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "23cd0d39",
+   "id": "c10bfe7d",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4557a53",
+   "id": "4984e7fd",
    "metadata": {},
    "source": [
     "Return 3 results. What's the 3rd question returned by the search engine?\n",
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39e348e1",
+   "id": "2344f048",
    "metadata": {},
    "source": [
     "## Q5. Building a prompt"
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a10c464c",
+   "id": "13fd5930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "18eb504f",
+   "id": "b14261b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7e9b3153",
+   "id": "4bd7a81b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ba71c3e9",
+   "id": "898ac4b6",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f9e924f",
+   "id": "46afb73c",
    "metadata": {},
    "source": [
     "What's the length of the resulting prompt? (use the len function)\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfacd425",
+   "id": "1c456323",
    "metadata": {},
    "source": [
     "## Q6. Tokens"
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7f0750",
+   "id": "6970f528",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c4a2debb",
+   "id": "64b7ea9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "83d7f23a",
+   "id": "f069ef0e",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "92db56d9",
+   "id": "6ff456fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e5cbad4f",
+   "id": "1e56b91c",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd71ffc",
+   "id": "a5d40b9e",
    "metadata": {},
    "source": [
     "Use the encode function. How many tokens does our prompt have?\n",
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d1d2f8bb",
+   "id": "683e1fb3",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "071eab51",
+   "id": "23d699d2",
    "metadata": {},
    "source": [
     "## Bonus: generating the answer (ungraded)\n"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "24b7af2f",
+   "id": "2f51f405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a7c866e8",
+   "id": "174ef57c",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7c2d4807",
+   "id": "22360727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ab4068b9",
+   "id": "7d87cf67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "db85cbcf",
+   "id": "a88f6d13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "62116f87",
+   "id": "30f84ee8",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "842a59cd",
+   "id": "e04335f5",
    "metadata": {},
    "source": [
     "## Bonus: calculating the costs (ungraded)"
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ba7da17",
+   "id": "b8f5ebef",
    "metadata": {},
    "source": [
     "## 💰 GPT-4o Cost Estimate for 1000 Requests\n",
@@ -776,7 +776,7 @@
     "- **Output tokens per request**: 250  \n",
     "- **Number of requests**: 1000  \n",
     "- **GPT-4o Pricing (as of June 17, 2025):**\n",
-    "  - **Input**: $0.005 per 1,000 tokens \\n\n",
+    "  - **Input**: $0.005 per 1,000 tokens  \n",
     "  - **Output**: $0.015 per 1,000 tokens\n",
     "\n",
     "---\n",
@@ -798,14 +798,6 @@
     "### ✅ Total Estimated Cost::\n",
     "`$0.75 (input) + $3.75 (output) = $4.50`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70db124f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
